--- a/src/app/stylessheets/text.scss
+++ b/src/app/stylessheets/text.scss
@@ -3,6 +3,8 @@
 }
 
 .heading {
+  margin-bottom: 1.67 * $spacing;
+
   &::after {
     margin-bottom: 10px;
     display: block;
